aircrack-ng (1.2-beta3-0kali3) kali; urgency=medium

  * Fix rules file to enable pcre support, add libpcre3-dev to Build-Depends.
  * Switch debhelper compat to 9.

 -- Raphaël Hertzog <hertzog@debian.org>  Tue, 07 Oct 2014 10:02:17 +0200

aircrack-ng (1.2-beta3-0kali2) kali; urgency=low

  * Fix rules files to properly override dh_auto_build/dh_auto_install.

 -- Raphaël Hertzog <buxy@kali.org>  Wed, 17 Sep 2014 18:49:18 +0000

aircrack-ng (1.2-beta3-0kali1) kali; urgency=low

  * Upstream import

 -- Mati Aharoni <muts@kali.org>  Wed, 02 Apr 2014 13:02:05 -0400

aircrack-ng (1.2-beta2-0kali3) kali; urgency=low

  * Added missing dependencies

 -- Mati Aharoni <muts@kali.org>  Tue, 18 Feb 2014 20:47:04 -0500

aircrack-ng (1.2-beta2-0kali2) kali; urgency=low

  * Added debian/watch file

 -- Mati Aharoni <muts@kali.org>  Sun, 05 Jan 2014 20:33:01 -0500

aircrack-ng (1.2-beta2-0kali1) kali; urgency=low

  * Upstream import

 -- Mati Aharoni <muts@kali.org>  Thu, 05 Dec 2013 19:45:54 -0500

aircrack-ng (1.2-beta1-1kali1) kali; urgency=low

  * Force rebuild

 -- Devon Kearns <dookie@kali.org>  Mon, 03 Jun 2013 11:25:27 -0600

aircrack-ng (1.2-beta1-1kali0) kali; urgency=low

  * Imported new upstream release

 -- Devon Kearns <dookie@kali.org>  Mon, 03 Jun 2013 11:18:22 -0600

aircrack-ng (1.2~svn2256-1kali1) kali; urgency=low

  * Fixed build depends

 -- Devon Kearns <dookie@kali.org>  Wed, 06 Mar 2013 06:27:25 -0700

aircrack-ng (1.2~svn2256-1kali0) kali; urgency=low

  * Imported new upstream version

 -- Devon Kearns <dookie@kali.org>  Wed, 06 Mar 2013 06:16:38 -0700

aircrack-ng (1.2~svn2247-0kali3) kali; urgency=low

  * libnl fixed

 -- Mati Aharoni <muts@kali.org>  Wed, 13 Feb 2013 14:08:52 -0500

aircrack-ng (1.2~svn2247-0kali2) kali; urgency=low

  * Added libnl to "make" directive

 -- Mati Aharoni <muts@kali.org>  Wed, 13 Feb 2013 13:54:20 -0500

aircrack-ng (1.2~svn2247-0kali1) kali; urgency=low

  * Updated aircrack-ng
