@@ -3,14 +3,14 @@ Section: net
 Priority: extra
 Maintainer: dookie <dookie@kali.org>
 Build-Depends: debhelper (>= 9), libssl-dev, libpcre3-dev, libsqlite3-dev, libnl-3-dev, libnl-genl-3-dev, pkg-config
-Standards-Version: 3.9.3
+Standards-Version: 3.9.6
 Homepage: http://aircrack-ng.org/
-Vcs-Git: ssh://git@git.kali.org/packages/aircrack-ng.git
+Vcs-Git: git://git.kali.org/packages/aircrack-ng.git
 Vcs-Browser: http://git.kali.org/gitweb/?p=packages/aircrack-ng.git;a=summary
 
 Package: aircrack-ng
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libssl1.0.0, sqlite3, wireless-tools, iw, usbutils, ethtool
+Depends: ${shlibs:Depends}, ${misc:Depends}, sqlite3, wireless-tools, iw, usbutils, ethtool
 Description: An 802.11 WEP and WPA-PSK key cracking program
  Aircrack-ng is an 802.11 WEP and WPA-PSK keys cracking 
  program that can recover keys once enough data packets 
