@@ -2,6 +2,8 @@ aircrack-ng (1.2-beta3-0kali3) kali; urgency=medium
 
   * Fix rules file to enable pcre support, add libpcre3-dev to Build-Depends.
   * Switch debhelper compat to 9.
+  * Misc cleanup to the packaging (drop hardcoded libssl1.0.0 in
+    Depends, fix debian/copyright, fix Vcs-Git URL).
 
  -- Raphaël Hertzog <hertzog@debian.org>  Tue, 07 Oct 2014 10:02:17 +0200
 
